--- a/property-single.html
+++ b/property-single.html
@@ -152,7 +152,7 @@
               </div>
               <div class="text">
                 <h3 class="mb-0">Alicia Huston</h3>
-                <div class="meta mb-3">Owner</div>
+                <div class="meta mb-3">Design Uploader</div>
                 <p>
                   
                 </p>
